--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -19,21 +19,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-    <TextView
-        android:id="@+id/text_curr_weather"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:text="@string/temp_celsius"
-        android:textSize="24sp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
     <ImageView
         android:id="@+id/icon_curr_weather"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_marginTop="48dp"
+        android:layout_width="175dp"
+        android:layout_height="175dp"
+        android:layout_marginTop="36dp"
         android:layout_marginStart="16dp"
         android:contentDescription="@string/icon_curr_weather_condition_desc"
         tools:srcCompat="@tools:sample/avatars[6]"
@@ -41,14 +31,24 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
+        android:id="@+id/text_curr_weather"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="55dp"
+        android:textSize="30sp"
+        android:gravity="center"
+        app:layout_constraintTop_toBottomOf="@+id/icon_curr_weather"
+        app:layout_constraintStart_toStartOf="@+id/icon_curr_weather" />
+
+    <TextView
         android:id="@+id/text_curr_weather_desc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:text="@string/temp_celsius"
-        android:textSize="16sp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:layout_marginStart="65dp"
+        android:textSize="20sp"
+        android:gravity="center"
+        app:layout_constraintTop_toBottomOf="@+id/text_curr_weather"
+        app:layout_constraintStart_toStartOf="@+id/icon_curr_weather" />
 
     <TextView
         android:id="@+id/text_curr_temp"
