--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -14,10 +14,12 @@
         android:layout_height="match_parent"
         android:contentDescription="@string/weather_condition_bg_desc"
         android:translationZ="0dp"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
         android:id="@+id/icon_curr_weather"
@@ -102,214 +104,215 @@
     <!-- ==== 5-day Forecast ==== -->
 
     <GridLayout
+        android:id="@+id/gridLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:columnCount="5"
         android:rowCount="3"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/text_data_last_updated"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/text_data_last_updated">
+        app:layout_constraintStart_toStartOf="parent">
 
         <TextView
             android:id="@+id/text_day1_day"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:textSize="16sp"
             android:layout_columnWeight="1"
-            android:gravity="center"
             android:layout_gravity="fill_horizontal"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_margin="8dp"
+            android:gravity="center"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/text_day2_day"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:textSize="16sp"
             android:layout_columnWeight="1"
-            android:gravity="center"
             android:layout_gravity="fill_horizontal"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_margin="8dp"
+            android:gravity="center"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/text_day3_day"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:textSize="16sp"
             android:layout_columnWeight="1"
-            android:gravity="center"
             android:layout_gravity="fill_horizontal"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_margin="8dp"
+            android:gravity="center"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/text_day4_day"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:textSize="16sp"
             android:layout_columnWeight="1"
-            android:gravity="center"
             android:layout_gravity="fill_horizontal"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_margin="8dp"
+            android:gravity="center"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/text_day5_day"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:textSize="16sp"
             android:layout_columnWeight="1"
-            android:gravity="center"
             android:layout_gravity="fill_horizontal"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_margin="8dp"
+            android:gravity="center"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:layout_constraintStart_toStartOf="parent" />
 
         <ImageView
             android:id="@+id/icon_day1_weather"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:contentDescription="@string/icon_curr_weather_condition_desc"
             android:layout_columnWeight="1"
-            android:gravity="center"
             android:layout_gravity="fill_horizontal"
-            tools:srcCompat="@tools:sample/avatars[6]"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:contentDescription="@string/icon_curr_weather_condition_desc"
+            android:gravity="center"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            tools:srcCompat="@tools:sample/avatars[6]" />
 
         <ImageView
             android:id="@+id/icon_day2_weather"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:contentDescription="@string/icon_curr_weather_condition_desc"
             android:layout_columnWeight="1"
-            android:gravity="center"
             android:layout_gravity="fill_horizontal"
-            tools:srcCompat="@tools:sample/avatars[6]"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:contentDescription="@string/icon_curr_weather_condition_desc"
+            android:gravity="center"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            tools:srcCompat="@tools:sample/avatars[6]" />
 
         <ImageView
             android:id="@+id/icon_day3_weather"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:contentDescription="@string/icon_curr_weather_condition_desc"
             android:layout_columnWeight="1"
-            android:gravity="center"
             android:layout_gravity="fill_horizontal"
-            tools:srcCompat="@tools:sample/avatars[6]"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:contentDescription="@string/icon_curr_weather_condition_desc"
+            android:gravity="center"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            tools:srcCompat="@tools:sample/avatars[6]" />
 
         <ImageView
             android:id="@+id/icon_day4_weather"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:contentDescription="@string/icon_curr_weather_condition_desc"
             android:layout_columnWeight="1"
-            android:gravity="center"
             android:layout_gravity="fill_horizontal"
-            tools:srcCompat="@tools:sample/avatars[6]"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:contentDescription="@string/icon_curr_weather_condition_desc"
+            android:gravity="center"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            tools:srcCompat="@tools:sample/avatars[6]" />
 
         <ImageView
             android:id="@+id/icon_day5_weather"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:contentDescription="@string/icon_curr_weather_condition_desc"
             android:layout_columnWeight="1"
-            android:gravity="center"
             android:layout_gravity="fill_horizontal"
-            tools:srcCompat="@tools:sample/avatars[6]"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:contentDescription="@string/icon_curr_weather_condition_desc"
+            android:gravity="center"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            tools:srcCompat="@tools:sample/avatars[6]" />
 
         <TextView
             android:id="@+id/text_day1_temp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_columnWeight="1"
+            android:layout_gravity="fill_horizontal"
             android:layout_margin="8dp"
+            android:gravity="center"
             android:text="@string/temp_celsius"
             android:textSize="16sp"
-            android:layout_columnWeight="1"
-            android:gravity="center"
-            android:layout_gravity="fill_horizontal"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/text_day2_temp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_columnWeight="1"
+            android:layout_gravity="fill_horizontal"
             android:layout_margin="8dp"
+            android:gravity="center"
             android:text="@string/temp_celsius"
             android:textSize="16sp"
-            android:layout_columnWeight="1"
-            android:gravity="center"
-            android:layout_gravity="fill_horizontal"
-            app:layout_constraintStart_toEndOf="@+id/text_day1_temp"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/text_day1_temp" />
 
         <TextView
             android:id="@+id/text_day3_temp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_columnWeight="1"
+            android:layout_gravity="fill_horizontal"
             android:layout_margin="8dp"
+            android:gravity="center"
             android:text="@string/temp_celsius"
             android:textSize="16sp"
-            android:layout_columnWeight="1"
-            android:gravity="center"
-            android:layout_gravity="fill_horizontal"
-            app:layout_constraintStart_toEndOf="@+id/text_day2_temp"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/text_day2_temp" />
 
         <TextView
             android:id="@+id/text_day4_temp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_columnWeight="1"
+            android:layout_gravity="fill_horizontal"
             android:layout_margin="8dp"
+            android:gravity="center"
             android:text="@string/temp_celsius"
             android:textSize="16sp"
-            android:layout_columnWeight="1"
-            android:gravity="center"
-            android:layout_gravity="fill_horizontal"
-            app:layout_constraintStart_toEndOf="@+id/text_day3_temp"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/text_day3_temp" />
 
         <TextView
             android:id="@+id/text_day5_temp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_columnWeight="1"
+            android:layout_gravity="fill_horizontal"
             android:layout_margin="8dp"
+            android:gravity="center"
             android:text="@string/temp_celsius"
             android:textSize="16sp"
-            android:layout_columnWeight="1"
-            android:gravity="center"
-            android:layout_gravity="fill_horizontal"
-            app:layout_constraintStart_toEndOf="@+id/text_day4_temp"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/text_day4_temp" />
     </GridLayout>
 
     <!-- ==== Action Buttons (Bottom) ==== -->
@@ -365,8 +368,8 @@
         android:layout_height="51dp"
         android:layout_margin="4dp"
         android:adjustViewBounds="true"
-        android:scaleType="fitXY"
         android:onClick="openAnalysis"
+        android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/button_weather_graphs"
         app:srcCompat="@drawable/analysis" />
@@ -382,5 +385,39 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/button_add_city_weather_data"
         app:srcCompat="@drawable/graph" />
+
+    <TextView
+        android:id="@+id/Season"
+        android:layout_width="121dp"
+        android:layout_height="35dp"
+        android:text="TextView"
+        android:textColor="@color/black"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/Day"
+        android:layout_width="103dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="88dp"
+        android:layout_marginTop="82dp"
+        android:text="TextView"
+        android:textColor="@color/black"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_data_date" />
+
+    <ImageButton
+        android:id="@+id/button_search"
+        android:layout_width="58dp"
+        android:layout_height="51dp"
+        android:layout_margin="4dp"
+        android:adjustViewBounds="true"
+        android:scaleType="fitXY"
+        android:onClick="openSearch"
+        app:srcCompat="@drawable/search"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/button_weather_analysis"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="512dp" />
 
 </android.support.constraint.ConstraintLayout>
