--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -94,4 +94,33 @@
         android:onClick="miami"
         app:layout_constraintStart_toEndOf="@+id/button14"
         app:layout_constraintTop_toBottomOf="@+id/button13" />
+
+    <Button
+        android:id="@+id/random"
+        android:layout_width="64dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="34dp"
+        android:text="Button"
+        app:layout_constraintTop_toBottomOf="@+id/button14"
+        tools:layout_editor_absoluteX="35dp" />
+
+    <Button
+        android:id="@+id/search"
+        android:layout_width="66dp"
+        android:layout_height="23dp"
+        android:layout_marginTop="30dp"
+        android:text="Button"
+        app:layout_constraintTop_toBottomOf="@+id/random"
+        tools:layout_editor_absoluteX="35dp" />
+
+    <EditText
+        android:id="@+id/editText2"
+        android:layout_width="wrap_content"
+        android:layout_height="11dp"
+        android:layout_marginStart="45dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name"
+        app:layout_constraintStart_toEndOf="@+id/search"
+        tools:layout_editor_absoluteY="295dp" />
 </android.support.constraint.ConstraintLayout>
