Put hard-coded strings into strings.xml, change About app text, check for android version above Marshmallow to prompt permissions during splash screen

--- a/app/src/main/res/layout/activity_analysis.xml
+++ b/app/src/main/res/layout/activity_analysis.xml
@@ -40,7 +40,7 @@
         android:layout_marginBottom="15dp"
         android:layout_marginStart="13dp"
         android:onClick="back"
-        android:text="Return" />
+        android:text="@string/return_button_text" />
 
 
 </RelativeLayout>
