--- a/app/src/main/res/layout/activity_graph.xml
+++ b/app/src/main/res/layout/activity_graph.xml
@@ -28,7 +28,7 @@
         android:layout_marginEnd="10dp"
         android:layout_marginTop="6dp"
         android:onClick="close"
-        android:text="Return"
+        android:text="@string/return_button_text"
         app:layout_constraintBottom_toTopOf="@+id/chart"
         app:layout_constraintEnd_toStartOf="@+id/button3"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,7 +44,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="6dp"
         android:onClick="show_1_day"
-        android:text="Daily"
+        android:text="@string/graph_daily_button_text"
         app:layout_constraintBottom_toTopOf="@+id/chart"
         app:layout_constraintEnd_toStartOf="@+id/button4"
         app:layout_constraintStart_toEndOf="@+id/button2"
@@ -59,7 +59,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="6dp"
         android:onClick="show_3_days"
-        android:text="3 Days"
+        android:text="@string/graph_three_days_button_text"
         app:layout_constraintBottom_toTopOf="@+id/chart"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button3"
@@ -74,7 +74,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="6dp"
         android:onClick="show_5_days"
-        android:text="5 Days"
+        android:text="@string/graph_five_days_button_text"
         app:layout_constraintBottom_toTopOf="@+id/chart"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button4"
@@ -88,7 +88,7 @@
         android:layout_marginStart="25dp"
         android:layout_marginTop="11dp"
         android:onClick="showAll"
-        android:text="Show All Lines"
+        android:text="@string/graph_show_all_button_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/chart" />
@@ -101,7 +101,7 @@
         android:layout_marginEnd="10dp"
         android:layout_marginTop="11dp"
         android:onClick="showTemp"
-        android:text="Show Only Temp"
+        android:text="@string/graph_show_temp_button_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/chart" />
@@ -112,7 +112,6 @@
         android:layout_height="42dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="8dp"
-        android:text="TextView"
         android:textColor="#000000"
         app:layout_constraintEnd_toStartOf="@+id/AvgMaxTemp"
         app:layout_constraintTop_toBottomOf="@+id/button6" />
@@ -123,7 +122,6 @@
         android:layout_height="42dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="12dp"
-        android:text="Textview2"
         android:textColor="#000000"
         app:layout_constraintEnd_toStartOf="@+id/AvgMinTemp"
         app:layout_constraintTop_toBottomOf="@+id/button6" />
@@ -135,7 +133,6 @@
         android:layout_marginTop="12dp"
         android:layout_marginEnd="16dp"
         android:textColor="#000000"
-        android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button7" />
 
@@ -145,7 +142,6 @@
         android:layout_height="43dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="18dp"
-        android:text="TextView"
         android:textColor="#000000"
         app:layout_constraintEnd_toStartOf="@+id/PieChart"
         app:layout_constraintTop_toBottomOf="@+id/AvgTemp" />
