--- a/app/src/main/res/layout/activity_manage_cities.xml
+++ b/app/src/main/res/layout/activity_manage_cities.xml
@@ -14,4 +14,12 @@
 
     </ListView>
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/deleteCitiesFab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="16dp"
+        app:srcCompat="@android:drawable/ic_delete" />
+
 </android.support.design.widget.CoordinatorLayout>
