--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -11,10 +11,10 @@
         android:id="@+id/toronto"
         android:layout_width="103dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="28dp"
         android:layout_marginTop="16dp"
-        android:text="@string/city1"
         android:onClick="toronto"
+        android:text="@string/city1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -32,8 +32,9 @@
     <Button
         android:id="@+id/vancouver"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="36dp"
         android:onClick="vancouver"
         android:text="@string/city3"
         app:layout_constraintStart_toStartOf="parent"
@@ -123,12 +124,13 @@
         android:id="@+id/city"
         android:layout_width="238dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="48dp"
         android:layout_marginEnd="52dp"
         android:ems="10"
         android:hint="City:"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/search"
         app:layout_constraintTop_toBottomOf="@+id/los_angeles" />
 
